--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+
+@import "./assets/scss/link.scss";
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+section{
+  //@include flex(center);
+  @include square(100%);
+}
+
+app-calendar-day-view,table{width: 100%}
+
